--- a/pdSQLPreparation.ipynb
+++ b/pdSQLPreparation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pdSQLPreparation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMGDndbFKvQU+wfEF3iyQ6Q",
+      "authorship_tag": "ABX9TyNvhlnYOJOg1tkd8arRCwcF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,12 +132,285 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Example "
+      ],
+      "metadata": {
+        "id": "xBDErdqbtzXy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# prepare recods to be inserted into SQL table through SQL Statement\n",
+        "insertSQL = [(10,'Jack', 85, 92),\n",
+        "             (29, 'Tom', 73,89),\n",
+        "             (65, 'Ram', 65,77),\n",
+        "             (5, 'Steve', 55, 91)]"
+      ],
+      "metadata": {
+        "id": "MCWT7Xh_qdKA"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#insert records into SQL table through SQL statement\n",
+        "insert_statement = \"Insert into student_score values(?,?,?,?)\"\n",
+        "executeSQL.executemany(insert_statement,insertSQL)\n",
+        "executeSQL.commit()"
+      ],
+      "metadata": {
+        "id": "CQnDnXtdsVFq"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#prepare SQL qurery\n",
+        "SQL_query = executeSQL.execute(\"SELECT * from student_score\")"
+      ],
+      "metadata": {
+        "id": "Xw3AKTQLs53r"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fetch the resultset for the query\n",
+        "resulset = SQL_query.fetchall()"
+      ],
+      "metadata": {
+        "id": "6L6w1R_btQeO"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#view the resultset\n",
+        "resulset"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m4CpPzyPtaxI",
+        "outputId": "2052ce2a-6789-4e70-9ded-77d2cad9b8fb"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(10, 'Jack', 85.0, 92.0),\n",
+              " (29, 'Tom', 73.0, 89.0),\n",
+              " (65, 'Ram', 65.0, 77.0),\n",
+              " (5, 'Steve', 55.0, 91.0)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#put the records together in dataframe\n",
+        "df_student_recors = pd.DataFrame(resulset,columns=list(zip(*SQL_query.description))[0])"
+      ],
+      "metadata": {
+        "id": "_-PB0f6uthqB"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#view the records in pandas dataframe\n",
+        "df_student_recors"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "id": "1DPtwDWUwaVW",
+        "outputId": "3086673a-c72b-46cd-ae71-72fb8f8dc844"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   Id   Name  Math  Science\n",
+              "0  10   Jack  85.0     92.0\n",
+              "1  29    Tom  73.0     89.0\n",
+              "2  65    Ram  65.0     77.0\n",
+              "3   5  Steve  55.0     91.0"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-f0f14477-860d-4608-9c95-1897cd190158\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Id</th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Math</th>\n",
+              "      <th>Science</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>10</td>\n",
+              "      <td>Jack</td>\n",
+              "      <td>85.0</td>\n",
+              "      <td>92.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>29</td>\n",
+              "      <td>Tom</td>\n",
+              "      <td>73.0</td>\n",
+              "      <td>89.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>65</td>\n",
+              "      <td>Ram</td>\n",
+              "      <td>65.0</td>\n",
+              "      <td>77.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5</td>\n",
+              "      <td>Steve</td>\n",
+              "      <td>55.0</td>\n",
+              "      <td>91.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f0f14477-860d-4608-9c95-1897cd190158')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-f0f14477-860d-4608-9c95-1897cd190158 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-f0f14477-860d-4608-9c95-1897cd190158');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "MCWT7Xh_qdKA"
+        "id": "ebW6O0kcu9Cp"
       },
       "execution_count": null,
       "outputs": []
